--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "echo \"Start: Running the project\" && babel-node server.js",
-    "dev": "nodemon --exec babel-node server.js --config-file ./babel.config.json",
+    "dev": "nodemon server.js",
     "build": "babel src -d dist --config-file ./babel.config.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
